# rust-name-generator

./: Cargo.toml  firstnames_en.map
src/: main.rs  ng.rs
