[package]
name = "name_generator"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Name Generator, generate random names from precomputed name statistics."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
indicatif = "0.17.7"
rand = "0.8.5"
serde_json = "1.0.108"
